feat(swagger): auto customizable response example
