# src/models/tournament/tournament.controller.ts
@@ -10,26 +10,33 @@ import {
   Query,
 } from '@nestjs/common';
 import {
+  ApiBadRequestResponse,
   ApiCreatedResponse,
+  ApiInternalServerErrorResponse,
   ApiNoContentResponse,
+  ApiNotFoundResponse,
   ApiOkResponse,
   ApiOperation,
   ApiTags,
 } from '@nestjs/swagger';
-import { Authorization } from 'src/common/decorators/authorization.decorator';
 import { Pagination } from 'src/common/decorators/pagination.decorator';
 import { ResponseMessage } from 'src/common/decorators/response.decorator';
-import { ControllerResponseData } from 'src/common/interceptors/response-formater.interceptor';
+import { ControllerResponseData } from 'src/common/interfaces/response.interface';
 import { ParamGetItemByIdDto } from 'src/common/validators/params.dto';
 import { QueryPaginationDto } from 'src/common/validators/query.dto';
+import { InternalServerErrorResponseDto } from 'src/common/validators/response.dto';
 import { DeleteResult } from 'typeorm';
 import { Member } from '../member/entities/member.entity';
 import { MemberRoles } from '../member/enum/roles.enum';
+import { TournamentResponseMessageEnum } from './constants/tournament.response.constant';
 import { Tournament } from './entities/tournament.entity';
 import { TournamentService } from './tournament.service';
 import {
-  TournamentArrayResponseDto,
-  TournamentResponseDto,
+  TournamentArrayOkResponseDto,
+  TournamentBadRequestResponseDto,
+  TournamentCreatedResponseDto,
+  TournamentNotFoundResponseDto,
+  TournamentOKResponseDto,
 } from './validators/tournament.response.dto';
 
 @Controller('tournament')
@@ -38,14 +45,15 @@ export class TournamentController {
   constructor(private readonly tournamentService: TournamentService) {}
 
   @Get()
-  @Authorization(true)
-  @ApiOkResponse({ type: TournamentArrayResponseDto })
+  @ApiOkResponse({ type: TournamentArrayOkResponseDto })
+  @ApiBadRequestResponse({ type: TournamentBadRequestResponseDto })
+  @ApiInternalServerErrorResponse({ type: InternalServerErrorResponseDto })
   @Pagination({
     itemsPerPage: 10,
     maxItemsPerPage: 50,
   })
   @ResponseMessage([
-    { status: HttpStatus.OK, message: 'Sucessfully fetched Tournaments' },
+    { status: HttpStatus.OK, message: TournamentResponseMessageEnum.OK },
   ])
   @ApiOperation({
     operationId: 'tournamentFindAll',
@@ -57,10 +65,16 @@ export class TournamentController {
   }
 
   @Get(':id')
-  @ApiOkResponse({ type: TournamentResponseDto })
+  @ApiOkResponse({ type: TournamentOKResponseDto })
+  @ApiNotFoundResponse({ type: TournamentNotFoundResponseDto })
+  @ApiBadRequestResponse({ type: TournamentBadRequestResponseDto })
+  @ApiInternalServerErrorResponse({ type: InternalServerErrorResponseDto })
   @ResponseMessage([
-    { status: HttpStatus.OK, message: 'Sucessfully fetched Tournament' },
-    { status: HttpStatus.NOT_FOUND, message: 'Tournament not found' },
+    { status: HttpStatus.OK, message: TournamentResponseMessageEnum.OK },
+    {
+      status: HttpStatus.NOT_FOUND,
+      message: TournamentResponseMessageEnum.NOT_FOUND,
+    },
   ])
   @ApiOperation({
     operationId: 'tournamentFindOne',
@@ -76,12 +90,13 @@ export class TournamentController {
   }
 
   @Post()
-  @ApiCreatedResponse({ type: TournamentResponseDto })
+  @ApiCreatedResponse({ type: TournamentCreatedResponseDto })
+  @ApiBadRequestResponse({ type: TournamentBadRequestResponseDto })
+  @ApiInternalServerErrorResponse({ type: InternalServerErrorResponseDto })
   @ResponseMessage([
-    { status: HttpStatus.CREATED, message: 'Sucessfully created Tournament' },
     {
-      status: HttpStatus.INTERNAL_SERVER_ERROR,
-      message: 'Failed to create Tournament',
+      status: HttpStatus.CREATED,
+      message: TournamentResponseMessageEnum.CREATED,
     },
   ])
   @ApiOperation({
@@ -102,11 +117,12 @@ export class TournamentController {
 
   @Delete(':id')
   @ApiNoContentResponse()
+  @ApiNotFoundResponse({ type: TournamentNotFoundResponseDto })
+  @ApiInternalServerErrorResponse({ type: InternalServerErrorResponseDto })
   @ResponseMessage([
-    { status: HttpStatus.NOT_FOUND, message: 'Tournament not found' },
     {
-      status: HttpStatus.INTERNAL_SERVER_ERROR,
-      message: 'Failed to delete Tournament',
+      status: HttpStatus.NOT_FOUND,
+      message: TournamentResponseMessageEnum.NOT_FOUND,
     },
   ])
   @HttpCode(HttpStatus.NO_CONTENT)
